[gd_scene load_steps=7 format=2]

[ext_resource path="res://title_screen/what5.jpeg" type="Texture" id=1]
[ext_resource path="res://title_screen/menu_options/Opções.tscn" type="PackedScene" id=2]
[ext_resource path="res://title_screen/menu_options/Achievements.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_screen/menu_options/Iniciar Jogo.tscn" type="PackedScene" id=4]
[ext_resource path="res://title_screen/font/balsamic_sans_32.tres" type="DynamicFont" id=5]
[ext_resource path="res://title_screen/Title Screen.gd" type="Script" id=6]

[node name="Title Screen" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1370.0
margin_top = -724.0
margin_right = -4.0
margin_bottom = 4.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1266.0
margin_bottom = 648.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1146.0
margin_bottom = 282.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Separador" type="HBoxContainer" parent="Menu"]
margin_top = 286.0
margin_right = 1146.0
margin_bottom = 568.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Botões" type="VBoxContainer" parent="Menu/Separador"]
margin_right = 1087.0
margin_bottom = 235.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 20
alignment = 1

[node name="Iniciar Jogo" parent="Menu/Separador/Botões" instance=ExtResource( 4 )]
margin_right = 1087.0
margin_bottom = 65.0

[node name="Achievements" parent="Menu/Separador/Botões" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 85.0
margin_right = 1087.0
margin_bottom = 150.0

[node name="Opções" parent="Menu/Separador/Botões" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 170.0
margin_right = 1087.0
margin_bottom = 235.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/Separador"]
margin_left = 1091.0
margin_right = 1091.0
margin_bottom = 282.0

[node name="Versão" type="Label" parent="Menu/Separador"]
margin_left = 1095.0
margin_right = 1146.0
margin_bottom = 282.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "v1.0"
align = 2
valign = 2

[connection signal="pressed" from="Menu/Separador/Botões/Iniciar Jogo" to="." method="_on_Iniciar_Jogo_pressed"]
[connection signal="pressed" from="Menu/Separador/Botões/Achievements" to="." method="_on_Achievements_pressed"]
[connection signal="pressed" from="Menu/Separador/Botões/Opções" to="." method="_on_Opes_pressed"]
